# simcse

./: .flake8  .pre-commit-config.yaml  README.md  evaluation.py  get_embeddings.py  pyproject.toml  run_unsup_example.sh  setup.py  simcse_to_huggingface.py  train.py
SentEval/: setup.py
SentEval/examples/: bow.py  gensen.py  googleuse.py  infersent.py  models.py  skipthought.py
SentEval/senteval/: binary.py  engine.py  mrpc.py  probing.py  rank.py  sick.py  snli.py  sst.py  sts.py  trec.py  utils.py
SentEval/senteval/tools/: classifier.py  ranking.py  relatedness.py  validation.py
demo/: README.md  flaskdemo.py  gradiodemo.py
demo/static/: index.html
simcse/: dataset.py  models.py  tool.py  trainers.py
