[tool.poetry]
name = "simcse"
version = "0.1.0"
description = ""
authors = ["Sean (Seok-Won) Yi <seantuokc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.6.0"
torch = { url = "https://download.pytorch.org/whl/cu113/torch-1.11.0%2Bcu113-cp39-cp39-linux_x86_64.whl" }
transformers = "^4.36.2"
datasets = "^2.15.0"
scikit-learn = "^1.3.2"
accelerate = "^0.25.0"
urllib3 = "<2.0.0"
requests = "^2.31.0"
botocore = "^1.34.4"
prettytable = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
